# moomoo-api-mcp

./: .gitignore  README.md  inspect_moomoo_logger.py  pyproject.toml
.github/workflows/: manual-release.yml  publish.yml  python-publish.yml
openspec/: project.md
openspec/changes/config-opend-host-port/: proposal.md  tasks.md
openspec/changes/config-opend-host-port/specs/configuration/: spec.md
openspec/changes/fix-account-id-precision/: design.md
openspec/changes/init-mcp-server/: tasks.md
openspec/changes/simplify-account-tools/: tasks.md
openspec/specs/account-info/: spec.md
openspec/specs/trade-unlock/: spec.md
src/moomoo_mcp/: server.py
src/moomoo_mcp/services/: trade_service.py
src/moomoo_mcp/tools/: account.py  market_data.py  trading.py
tests/: test_trade_service_account.py
tests/test_services/: test_trade_service.py
tests/test_tools/: test_account.py  test_system.py
